--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "rimraf dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "test": "npm run build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
