--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "rimraf dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "deploy": "git add . && git commit -m 'Heroku' && git push"
   },
   "author": "",
   "license": "ISC",
@@ -21,10 +22,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "type-graphql": "^0.17.6"
   },
   "devDependencies": {
+    "rimraf": "^3.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
