--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "rimraf dist && tsc",
-    "start": "tsc && node dist/index.js",
-    "deploy": "git add . && git commit -m 'Heroku' && git push"
+    "build": "tsc",
+    "rmdist": "rimraf dist && ",
+    "start": "node dist/index.js",
+    "deploy": "git add . && git commit -m 'Heroku' && git push",
+    "test": "tsc",
+    "test1": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
