--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc",
-    "rmdist": "rimraf dist && ",
+    "build": "rimraf dist && tsc",
     "start": "node dist/index.js",
     "deploy": "git add . && git commit -m 'Heroku' && git push",
     "test": "tsc",
