--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/index.js",
-    "deploy": "git add . && git commit -m 'Heroku' && git push",
-    "test": "tsc",
-    "test1": "node dist/index.js"
+    "deploy": "git add . && git commit -m 'Heroku' && git push"
   },
   "author": "",
   "license": "ISC",
