--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-server-express": "^2.12.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
